# hs-mt2calculator

./: .gitignore  .projectile  README.md  hs-mt2calculator.cabal  mt2calculator.cabal  stack.yaml
src/HEP/Kinematics/Variable/: MT2.hsc
test/: Main.hs  test_asymm_mt2_bisect.hs  test_mt2.hs  test_symm_mt2.hs
