name:                hs-mt2calculator
version:             0.1.0.0
synopsis:            Haskell FFI for calculating MT2
description:         Haskell FFI for calculating MT2
homepage:            https://github.com/cbpark/hs-mt2calculator
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2014-2015, 2017 Chan Beom Park
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/hs-mt2calculator.git

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Kinematics.Variable.MT2
  build-depends:       base >=4.8
                     , hep-utilities
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields
  build-tools:         hsc2hs

executable test_mt2
  main-is:             test_mt2.hs
  build-depends:       base >=4.8
                     , hep-utilities
                     , hs-mt2calculator
  extra-libraries:     MT2Calculator
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  if flag(devel)
    buildable:         True
  else
    buildable:         False