name:                mt2calculator
version:             0.1.0.0
synopsis:            Haskell FFI for calculating MT2
-- description:
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Kinematics.Variable.MT2
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fwarn-incomplete-patterns

executable mt2runtest
  build-depends:       base >=4.6,
                       mt2calculator
  hs-source-dirs:      test
  main-is:             Main.hs
  extra-libraries:     MT2Calculator stdc++
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fwarn-incomplete-patterns