name:                mt2calculator
version:             0.1.0.0
synopsis:            Haskell FFI for calculating MT2
-- description:
homepage:            http://github.com/cbpark/hs-mt2calculator
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2014 Chan Beom Park
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/hs-mt2calculator.git

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Kinematics.Variable.MT2
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable mt2runtest
  main-is:             Main.hs
  build-depends:       base >=4.6,
                       mt2calculator
  extra-libraries:     mt2calculator stdc++
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  if flag(devel)
    buildable:         True
  else
    buildable:         False